# FlexPal_Zephyr

./: compile.sh
docker/: rundocker.sh
modules/audio/sof/src/init/: init.c
modules/debug/TraceRecorder/zephyr/: module.yml
modules/hal/gigadevice/: 0001-modify-timer0-pinctrl.patch
modules/hal/rpi_pico/: ChangeLog.zephyr.md
modules/hal/rpi_pico/zephyr/: module.yml
modules/hal/telink/: .gitmodules  CMakeLists.txt  Kconfig
modules/hal/telink/tlsr9/: CMakeLists.txt  Kconfig
modules/hal/telink/zephyr/: module.yml
modules/lib/cmsis-dsp/zephyr/: module.yml
modules/lib/cmsis-nn/zephyr/: module.yml
modules/lib/lz4/zephyr/: module.yml
modules/lib/tflite-micro/zephyr/: module.yml
modules/tee/tf-a/trusted-firmware-a/: Makefile
pneumatic-control-device/: CMakeLists.txt  Readme.txt  prj.conf
pneumatic-control-device/boards/: gd32f407v_start.overlay
pneumatic-control-device/dts/bindings/: air,valve.yaml  us6330-015-s.yaml
pneumatic-control-device/patch/: 0001-delete-dts-config.patch  0001-modify-hardware-clock.patch  Readme  apply_patch.sh
pneumatic-control-device/src/: main.c
pneumatic-control-device/src/lib/motor_ctrl/: motor.c  motor.h  valve.c  valve.h
pneumatic-control-device/src/lib/pid_ctrl/: pid.c  pid.h
pneumatic-control-device/src/sensor/: sensor.c  sensor.h
pneumatic-control-device/src/shell/: shell.c  shell.h
pneumatic-control-device/src/tach/: tach.c  tach.h
pneumatic-control-device/src/uart_handle/: uart_handle.c  uart_handle.h
zephyr/boards/arm/gd32f407v_start/: gd32f407v_start-pinctrl.dtsi  gd32f407v_start.dts
(+180 files in other folders)
